--- a/src/apps/1688Admin/webapp/README.pug
+++ b/src/apps/1688Admin/webapp/README.pug
@@ -673,6 +673,13 @@ block content
                         |1.新增系统管理的用户管理页面；OA-人力资源-人员信息新增/编辑：添加地址选择、民族选择、政治面貌选择；OA-个人事务-通知公告：修改tab页切换通知/公告
                         br
                         |2.门户网站1688Web，新增 招商、资讯、党团、关于 页面
+                    .p
+                        .num 11.16
+                        |1.新增系统管理-权限管理相关页面；OA-个人事务-通知公告-发布：添加树结构的人员列表选择功能
+                        br
+                        |2.门户网站1688Web，新增 注册、个人中心页面，文章列表增加分页样式
+                        br
+                        |3.关于bootstrap-treeview插件，11.08号新增组织架构页面时，已替换为扩展版的插件：https://github.com/patternfly/patternfly-bootstrap-treeview，如果遇到插件报错，请复制该插件最新的静态资源覆盖到项目开发目录。
                     
 
                     
