--- a/src/apps/1688Web/components/tabpage/index.styl
+++ b/src/apps/1688Web/components/tabpage/index.styl
@@ -19,6 +19,14 @@ TPC_PADDING = 0.5rem
             color GRAY_66
             position relative
             padding 0.12rem 0.2rem
+            .num
+                background-color RED_INTENSE
+                color WHITE
+                height 0.18rem
+                line-height 0.18rem
+                font-size 0.12rem
+                padding 0 0.03rem
+                border-radius 0.02rem
             
         &.active
             a
