--- a/src/apps/1688Web/components/topbar/index-empty.pug
+++ b/src/apps/1688Web/components/topbar/index-empty.pug
@@ -24,6 +24,6 @@
                     include parts/about
                 
         .user-area
-            .btn.user-area-btn.login#btn_login 登录
-        
+            .user-info-container
+                include parts/user-info
 
