--- a/src/apps/1688Web/webapp/party-union-news.pug
+++ b/src/apps/1688Web/webapp/party-union-news.pug
@@ -64,6 +64,7 @@ block content
                                         li
                                             a.touch-active(href='party-union-news-article.html' target='_blank') 韩副外长将出席印尼世界经济论坛 介绍韩方立场
                                             .date 2018.06.14
+                                    include ../components/pagination/index
             include ../components/footer/index
             include ../components/sidebar/index
 
