--- a/src/apps/1688Web/webapp/stylus/bs-overwrite.styl
+++ b/src/apps/1688Web/webapp/stylus/bs-overwrite.styl
@@ -36,12 +36,36 @@
                 background-color GREEN !important
                 border-color GREEN !important
                 color WHITE
+    &.pagination-article-list
+        margin-top 0.3rem
+        li
+            font-size 0.12rem
+            display inline-block
+            a
+                color THEME_COLOR
+            &.active
+                a
+                    background-color THEME_COLOR !important
+                    border-color THEME_COLOR !important
+                    color WHITE
 
 .form-control
     //border-color GRAY_E3
     &:focus
         box-shadow inset 0 1px 1px rgba(0,0,0,0.075)
         border-color THEME_COLOR
+
+.simple-tabs
+    padding-top 0
+    border-left 1px solid TODO_BORDER_COLOR
+    border-right 1px solid TODO_BORDER_COLOR
+    background-color GRAY_F9
+    > li
+        > a
+            margin-left 0
+            margin-right 0
+            border-radius 0
+            padding 0.06rem 0.12rem
 
 
 legend
