--- a/src/apps/1688Web/webapp/stylus/index.styl
+++ b/src/apps/1688Web/webapp/stylus/index.styl
@@ -9,6 +9,7 @@
 @require 'cool-form-group'
 @require 'btn'
 @require 'article'
+@require 'file-input-overwrite'
 
 
 a
@@ -212,6 +213,7 @@ for i in (1..10)
 @require '../../components/banner/index'
 @require '../../components/tabpage/index'
 @require '../../components/login/index'
+@require '../../components/user-info/index'
 @require 'ie9fix'
 
 
