--- a/src/apps/1688Web/components/user-info/message-list.pug
+++ b/src/apps/1688Web/components/user-info/message-list.pug
@@ -9,11 +9,15 @@
         .message-item-avatar
             .message-item-avatar-ball
                 img(src=IMG_DIR + 'avatar-default.jpg')
-        a.message-item-text(href="personal-message-reply.html") 今天天气不错 :)
+        a.message-item-text(href="personal-message-reply.html") 
+            |今天天气不错 :)
+            .message-item-time 2018-08-23 13:59
     .message-item.left.clickable.readed
         .message-item-name Isabella Yang
         .message-item-avatar
             .message-item-avatar-ball
                 img(src=IMG_DIR + 'avatar-default.jpg')
-        a.message-item-text(href="personal-message-reply.html") 今天18:00需要准备XX报告到401D
+        a.message-item-text(href="personal-message-reply.html") 
+            |今天18:00需要准备XX报告到401D
+            .message-item-time 2018-08-23 13:59
         
