--- a/src/apps/1688Web/webapp/personal-message-reply.pug
+++ b/src/apps/1688Web/webapp/personal-message-reply.pug
@@ -51,7 +51,9 @@ block content
                                             .message-item-avatar
                                                 .message-item-avatar-ball
                                                     img(src=IMG_DIR + 'avatar-default.jpg')
-                                            .message-item-text 今天18:00需要准备XX报告到401D
+                                            .message-item-text 
+                                                |今天18:00需要准备XX报告到401D
+                                                .message-item-time 2017-12-34 12:42
                                     .message-editor
                                         textarea.message-textarea#message_text(rows='2')
                                         .message-sendbtn
@@ -69,6 +71,8 @@ block js
     script(src=JS_DIR + 'bootstrap-fileinput/fileinput.min.js')
     script(src=JS_DIR + 'bootstrap-fileinput/zh.js')
     script(src=JS_DIR + 'bootstrap-fileinput/theme.min.js')
+    script(src=JS_DIR + 'moment/moment.min.js')
+    script(src=JS_DIR + 'moment/zh-cn.js')
     script(src=JS_DIR + 'toastr.min.js')
     script(src=JS_DIR + 'BSModal.js')
     script(src=JS_DIR + 'common.js')
