--- a/src/apps/1688Web/components/topbar/parts/company-sel.pug
+++ b/src/apps/1688Web/components/topbar/parts/company-sel.pug
@@ -1,4 +1,4 @@
-.menu-btn.sel 名企
+a.menu-btn.sel(href="company-star.html") 名企
 .submenu
-    .submenu-btn 明星企业
-    .submenu-btn 创业领军企业
+    a.submenu-btn(href="company-star.html") 明星企业
+    a.submenu-btn(href="company-lead.html") 创业领军企业
