--- a/src/apps/1688Web/webapp/stylus/index.styl
+++ b/src/apps/1688Web/webapp/stylus/index.styl
@@ -198,7 +198,7 @@ for i in (1..10)
             &:before
                 cacuHeightPct(i,j)
 
-
+@require 'section-title'
 @require '../../components/topbar/index'
 @require '../../components/slider/index'
 @require '../../components/index-news/index'
@@ -214,6 +214,9 @@ for i in (1..10)
 @require '../../components/tabpage/index'
 @require '../../components/login/index'
 @require '../../components/user-info/index'
+@require '../../components/company-list/index'
+@require '../../components/resource-piclist/index'
+@require '../../components/chuangye/index'
 @require 'ie9fix'
 
 
