--- a/src/apps/1688Web/components/topbar/parts/park-sel.pug
+++ b/src/apps/1688Web/components/topbar/parts/park-sel.pug
@@ -1,6 +1,6 @@
-.menu-btn.sel 园区
+a.menu-btn.sel(href="park-facility.html") 园区
 .submenu
-    .submenu-btn 园区配套
-    .submenu-btn 园区活动
-    .submenu-btn 园区生活
-    .submenu-btn 企业招聘
+    a.submenu-btn(href="park-facility.html") 园区配套
+    a.submenu-btn(href="park-activity.html") 园区活动
+    a.submenu-btn(href="park-life.html") 园区生活
+    a.submenu-btn(href="park-hr.html") 企业招聘
