--- a/src/apps/1688Web/webapp/regist.pug
+++ b/src/apps/1688Web/webapp/regist.pug
@@ -24,6 +24,10 @@ block content
                         .deco-box
                         .tp-content-title
                             |用户注册
+                            .tp-content-title-deco
+                                |中艺1688
+                                br
+                                |SHANDONG ARTEX
                         .tp-content-inner
                             form.row.no-bottom#regist_form(name='regist_form')
                                 .col-xs-12.col-sm-8.col-sm-offset-2.col-md-6.col-md-offset-3
@@ -78,4 +82,3 @@ block pagejs
     
 
         
-
