--- a/src/apps/1688Web/webapp/stylus/btn.styl
+++ b/src/apps/1688Web/webapp/stylus/btn.styl
@@ -2,6 +2,7 @@
     border-radius 0.02rem
     transition all COMMON_ANIM_TIME ease
     position relative
+    box-sizing border-box !important
 .btn-large
     padding 0.09rem 0.16rem
 .btn-small
@@ -41,8 +42,8 @@
             background-color GRAY_F5
             border-color GRAY_CC
             color RED
-        
-    
+
+
 //页面级别按钮
 .btn-theme
     background-color THEME_COLOR
