--- a/src/apps/1688Web/components/company-list/index.styl
+++ b/src/apps/1688Web/components/company-list/index.styl
@@ -30,6 +30,7 @@
 
 ORG_LOGO_HEIGHT = 1.6rem
 ORG_LOGO_WIDTH = 3.2rem
+ORG_LOGO_WIDTH_PHOTO = 1.14rem
 ORG_INTRO_SPACE = 0.1rem
 ORG_INTRO_BOTTOM = 0.32rem
 ORG_INTRO_BGC = GRAY_F9
@@ -45,6 +46,8 @@ ORG_INTRO_BGC = GRAY_F9
     overflow auto
     &.has-bottom
         padding-bottom ORG_INTRO_BOTTOM
+    &.img-as-photo
+        padding-left ORG_LOGO_WIDTH_PHOTO + ORG_INTRO_SPACE
 .orgintro-pills
     position absolute
     bottom 0.04rem
@@ -59,6 +62,14 @@ ORG_INTRO_BGC = GRAY_F9
         float left
         margin-left 0.04rem
         border-radius COMMON_BORDER_RADIUS
+        &.orgintro-btn
+            padding 0 0.24rem
+            background-color THEME_COLOR
+            border-radius 0.4rem
+            color WHITE
+            text-decoration none
+            &:hover
+                background-color darken(THEME_COLOR, 10%)
 .orgintro-logo
     width ORG_LOGO_WIDTH
     height ORG_LOGO_HEIGHT
@@ -69,6 +80,9 @@ ORG_INTRO_BGC = GRAY_F9
         width 100%
         height 100%
         float left
+.img-as-photo
+    .orgintro-logo
+        width ORG_LOGO_WIDTH_PHOTO
 .orgintro-title
     font-size 0.16rem
     color GRAY_33
