--- a/src/apps/1688Web/webapp/chuangye-help.pug
+++ b/src/apps/1688Web/webapp/chuangye-help.pug
@@ -13,15 +13,25 @@ block content
             
             .row-space-0
                 .container.tp-container
-                    .row
-                        .col-xs-12
-                            include ../components/company-list/company-lead
-                        .col-xs-12.row-space-10
-                            include ../components/resource-piclist/company-lead
-                        .col-xs-12
-                            include ../components/pagination/index
+                    .tp-content
+                        .deco-box
+                        a.article-intro-item(href="chuangye-help-article.html")
+                            .article-intro-title
+                                .article-intro-title-main 高科技园区科技孵化及加速发展扶持办法
+                                .article-intro-title-addon 2018-10-23
+                            .article-intro 为贯彻落实《国家中长期科学和技术发展规划纲要（2006—2020年）》，引导和支持高科技园区（以下简称“园区”）科技企业孵化体系
+                        a.article-intro-item(href="chuangye-help-article.html")
+                            .article-intro-title
+                                .article-intro-title-main 高科技园区科技孵化及加速发展扶持办法
+                                .article-intro-title-addon 2018-10-23
+                            .article-intro 为贯彻落实《国家中长期科学和技术发展规划纲要（2006—2020年）》，引导和支持高科技园区（以下简称“园区”）科技企业孵化体系
+                        a.article-intro-item(href="chuangye-help-article.html")
+                            .article-intro-title
+                                .article-intro-title-main 高科技园区科技孵化及加速发展扶持办法
+                                .article-intro-title-addon 2018-10-23
+                            .article-intro 为贯彻落实《国家中长期科学和技术发展规划纲要（2006—2020年）》，引导和支持高科技园区（以下简称“园区”）科技企业孵化体系    
+                        include ../components/pagination/index
             include ../components/footer/index
             include ../components/sidebar/index
 
         
-
