--- a/src/apps/1688Web/webapp/stylus/index.styl
+++ b/src/apps/1688Web/webapp/stylus/index.styl
@@ -42,7 +42,7 @@ body
     -ms-user-select none
     -o-user-select none
     user-select none
-    
+
 
 .main-content
     width 100%
@@ -166,7 +166,7 @@ CacuRowSpace(space_num)
         CacuRowSpace(INDEX_SPACE_MOBILE)
     .row-space-10
         CacuRowSpace(0.04rem)
-    
+
 
 cacuHeightPct(pct,total)
     padding-top (pct/total)*100 + '%'
@@ -199,6 +199,7 @@ for i in (1..10)
                 cacuHeightPct(i,j)
 
 @require 'section-title'
+@require 'box-form'
 @require '../../components/topbar/index'
 @require '../../components/slider/index'
 @require '../../components/index-news/index'
@@ -218,7 +219,3 @@ for i in (1..10)
 @require '../../components/resource-piclist/index'
 @require '../../components/chuangye/index'
 @require 'ie9fix'
-
-
-
-
