--- a/src/apps/1688Web/components/chuangye/index.styl
+++ b/src/apps/1688Web/components/chuangye/index.styl
@@ -98,6 +98,10 @@ ORG_LI_BTN_HEIGHT = 0.3rem
     font-size 0.14rem
     color GRAY_99
 
+.tp-content
+    .org-li
+        background-color GRAY_F5
+
 .mobile
     .org-li
         min-height (ORG_LI_IMG_HEIGHT + 2*ORG_LI_SPACE)*ORG_LI_MOBILE_PCT
