--- a/src/apps/1688Web/components/topbar/parts/resource.pug
+++ b/src/apps/1688Web/components/topbar/parts/resource.pug
@@ -1,9 +1,9 @@
-.menu-btn 资源
+a.menu-btn(href="resource-invest.html") 资源
 .submenu
-    .submenu-btn 融资服务
-    .submenu-btn 财税服务
-    .submenu-btn 人力资源
-    .submenu-btn 管理咨询
-    .submenu-btn 法律服务
-    .submenu-btn 专利服务
-    .submenu-btn 培训服务
+    a.submenu-btn(href="resource-invest.html") 融资服务
+    a.submenu-btn(href="resource-finance.html") 财税服务
+    a.submenu-btn(href="resource-hr.html") 人力资源
+    a.submenu-btn(href="resource-management.html") 管理咨询
+    a.submenu-btn(href="resource-law.html") 法律服务
+    a.submenu-btn(href="resource-patent.html") 专利服务
+    a.submenu-btn(href="resource-coach.html") 培训服务
